2016-11-07  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.2-beta02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.2-beta02 final changes';git push
	git tag -a 4.6.2-beta02 -m 'Version 4.6.2-beta02 new features: MSVC/C++ compliance, JSON "attributes" and "variables" blocks';git push --tags

	* Henry added "attributes" and "variables" blocks to JSON backend

2016-11-06  Charlie Zender  <zender@uci.edu>

	* Make nco_mta.[ch] C++-compliant

	* Re-prototype nco_join_sng() to avert compiler warnings

	* Add strsep() replacement code for MSVC

2016-11-04  Charlie Zender  <zender@uci.edu>

	* Implement/use jsn_typ_nm() to define JSON types

	* Draft fix so ncatted understands NaN on MinGW

2016-11-03  Charlie Zender  <zender@uci.edu>

	* Fix C++ (and thus Windows) build

	* NCO 4.6.2-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.2-beta01 final changes';git push
	git tag -a 4.6.2-beta01 -m 'Version 4.6.2-beta01 new features: mta backslashes, concise warnings, JSON';git push --tags

	* Tidy JSON output whitespace

2016-11-03  Henry Butowsky  <henryb@hush.com>

	* First cut of JSON output from ncks

2016-10-25  Charlie Zender  <zender@uci.edu>

	* Limit number of non-CCW errors

	* Clarify missing value error message for multi-arguments

2016-10-22  Charlie Zender  <zender@uci.edu>

	* Clarify how to create new record dimensions in ncra/ncrcat messages

2016-10-13  Charlie Zender  <zender@uci.edu>

	* ncremap now loads ncl module on edison to find ESMF_RegridWeightGen

2016-10-12  Charlie Zender  <zender@uci.edu>

	* Add HINT to multi-arg error handling, NCO'ize routines

2016-10-11  Charlie Zender  <zender@uci.edu>

	* Suppress all but first WARNING from nco_is_spc_in_cf_att()

2016-10-10  Charlie Zender  <zender@uci.edu>

	* Jerome added support for double-backslash quoting in multi-arguments

2016-10-07  Charlie Zender  <zender@uci.edu>

	* Jerome changed multi-args to use strstr() instead of strtok() or strsep()
