@@ -1,3 +1,7 @@
+2016-11-08  Charlie Zender  <zender@uci.edu>
+
+	* Henry added capability for increasing default level of attribute verbosity, now named jsn_att_fmt
+
 2016-11-07  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.6.2-beta02 release procedure:
